Update settings - build with .proto files bundled

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,7 +50,9 @@
     "protoc": {
         "options": [
             "--proto_path",
-            "protos"
+            "protos",
+            "--proto_path",
+            ".nmk/protos"
         ]
     },
     "cSpell.enabledLanguageIds": [
