--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.flake8Args": [
-        "--ignore=E501,B902,W503"
+        "--ignore=E203,E501,B902,W503"
     ],
     "python.formatting.provider": "black",
     "python.formatting.blackArgs": [
@@ -35,7 +35,9 @@
         "protoc",
         "protobuf",
         "grpcio",
-        "dynod"
+        "dynod",
+        "nmk",
+        "pypi"
     ],
     "python.analysis.extraPaths": [
         "src"
@@ -55,7 +57,10 @@
             ".nmk/protos"
         ]
     },
-    "cSpell.enabledLanguageIds": [
-        "proto3"
-    ]
+    "cSpell.enableFiletypes": [
+        "proto3",
+        "yaml",
+        "python"
+    ],
+    "cSpell.allowCompoundWords": true
 }
