--- a/nmk.yml
+++ b/nmk.yml
@@ -1,8 +1,9 @@
 refs:
+    - pip://nmk-badges!plugin.yml
+    - pip://nmk-github!plugin.yml
     - pip://nmk-python!plugin.yml
     - pip://nmk-vscode!plugin.yml
     - pip://nmk-proto!plugin.yml
-    - pip://nmk-github!plugin.yml
     - <workspace>/shared.yml
     - workspace:
         local: ../../shared
